# projeto_embarca

AHT20/: AHT20.c  CMakeLists.txt
AHT20/lib/: mbedtls_config.h  mbedtls_config_examples_common.h
